--- a/Donation.html
+++ b/Donation.html
@@ -5,6 +5,7 @@
     <link href="css/home.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:200" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta charset="utf-8">
     <script src="https://use.fontawesome.com/99ae05c73c.js"></script>
     <title>About Us</title>
   </head>
