--- a/aboutUs.html
+++ b/aboutUs.html
@@ -59,7 +59,7 @@
     <br><br>
     <div class="activity">
         <h2 class="Heading" style="text-align:center; font-size:35px;">Activities of Dinajpur Notun Aalo Society</h2>
-        <img src="img/activity.png" class="activity-img"><br>
+        <img src="img/activity.png" class="img-responsive activity-img"><br>
         <p class="content">DNAS takes a tripartite approach to its work, dividing its activities between advocacy, Network Building, and Service Delivery.
 Through Advocacy, it seeks to counter discrimination and improve the quality of life of PLHIV.</p>
     </div>
