fixed padding on all pages

--- a/Home.html
+++ b/Home.html
@@ -92,7 +92,7 @@
     </a>
   </div>
 </div>
-<br><br><br><br>
+
 <div class="container-fluid">
     <div class="row">
 
@@ -125,21 +125,21 @@
             <h1 class="Heading" style="text-align:center;">News</h1>
             <br><br>
 
-              <div class="col-xs-4">
+              <div class="col-md-4">
                 <h3>Inauguration of Age India </h3>
                 <div class="img-container">
                   <a href="Gallery.html"><img src="img/img20.jpg"></a>
                 </div>
                 <br><br><a href="Gallery.html" class="btn btn-gal">View Gallery</a>
               </div>
-              <div class="col-xs-4">
+              <div class="col-md-4">
                 <h3>Celebrating World Aids Day </h3>
                 <div class="img-container">
                   <a href="Gallery.html"><img src="img/img10.jpg"></a>
                                 </div>
                 <br><br><a href="Gallery.html" class="btn btn-gal">View Gallery</a>
               </div>
-              <div class="col-xs-4">
+              <div class="col-md-4">
                 <h3> Health camp Age India </h3>
                 <div class="img-container">
                   <a href="Gallery.html"><img src="img/img23.jpg" style="height:"></a>
