--- a/Service-network.html
+++ b/Service-network.html
@@ -42,7 +42,7 @@
         <div class="row">
           <h1 class="Heading" style="text-align:center;">Service Delivery</h1><br>
           <p class="content">
-          <ul> Dinajpur Notun Aalo Society provided various forms of support to the targeted high-risk groups (HRGs) – including
+          <ul style="padding:0px 10px 0px 30px;"> Dinajpur Notun Aalo Society provided various forms of support to the targeted high-risk groups (HRGs) – including
 condom promotion and distribution, various tests, ICTC, VDRL testing free of cost etc. We also involve in behavior change communication (BCC) activities through regular hot spot visits, home visit, hospital visit, counseling etc. The society also encouraged its beneficiaries to access their services from mainstream and government health care providers.
 <br><br>We got a project for Rogi kalian Samity under the INDIA Government & West Bengal Government Raining  by CMOH uttar Dinajpur .
 <br><br>DINAJPUR NOTUN AALO SOCIETY Approached to SDO of Islampur Sub division area .He got a chance to work some old people at uttar Dinajpur Distract .Dinajpur Notun Aalo Society establish Old age Home for senior People in islampur sub division area.
@@ -54,7 +54,7 @@ condom promotion and distribution, various tests, ICTC, VDRL testing free of cos
               <h1 class="Heading" style="text-align:center;">Network Building</h1><br>
               <p class="content">
                 <b>
-                  <ul>
+                  <ul style="padding:0px 10px 0px 30px;">
               <li>  Dinajpur notun Aalo Society  also launched several workshops, for purposes of capacity building.</li><br>
  <li>In the Uttar Dinajpur  district, with the intention make a network building in all block of district. The Board member of society has taken various trainings throughout the year I order to built up the skills of community members in an array of subjects such as good governance, Human Rights, Advocacy and HIV/AIDS  etc. Dinapur Notun Aalo Society  also run with close relation with other NGO in district. Dinapur Notun Aalo Society All so Work  Sub Division Officer In Islampur ,All  Block Development Officer(BDO) under of Islampur Sub Division Areas. We all so work white CHOM in uttar  Dinajpur District .Dinajpur Notun Aalo Society all so work islampu BPHC (Ramganj Sub Center/ Hospital )  We got a Project under RSBY.</li>
 <br><li>Last 4(Four) Years Dinajpur Notun Aalo Society face lot of challenges. Decimation For our MSM(mem Having sex white men ),TG(Transgender) & Hijra Community.</li>
