"fixed footer and gallery images"

--- a/Gallery.html
+++ b/Gallery.html
@@ -120,7 +120,7 @@
     <div class="footer-bottom">
         <div class="container">
             <div class="footer-bottom-left">
-                &copy; 2017 All rights reserved. Created by <a href="#">MASH</a>.
+                &copy; 2017 All rights reserved. Created by <a href="http://mashglobal.org">MASH</a>.
             </div><!-- /.footer-bottom-left -->
 
         </div><!-- /.container -->
@@ -132,7 +132,7 @@
         $(document).ready(function() {
             var imageUrl = ["img1", "img2", "img3", "img4", "img5", "img6", "img7", "img8", "img9", "img10", "img11", "img12", "img13", "img14", "img15", "img16", "img17", "img18", "img19", "img20", "img21", "img23", "img24", "img25"];
            for (var i = 0; i < imageUrl.length; i++) {
-               document.getElementById("image-container").innerHTML += "<img src='img/" + imageUrl[i] + ".jpg' id=" + i + ">";
+               document.getElementById("image-container").innerHTML += "<img src='img/" + imageUrl[i] + ".jpg' id=" + i + " class='img-responsive'>";
 
              }
 
