--- a/Home.html
+++ b/Home.html
@@ -41,7 +41,7 @@
 
 
     <div class="">
-  <br>
+  <br><br><br><br>
   <div id="imgGal" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
@@ -57,7 +57,7 @@
       <div class="item active">
         <img src="img/img8.jpg" alt="Chania" width="460" height="345">
         <div class="carousel-caption">
-          <h3>District Level Meeting</h3>
+
           <p>Sensitization of Trans Gender Community</p>
         </div>
       </div>
@@ -97,7 +97,7 @@
     <div class="row">
 
 
-          <br><br>
+
           <div class="vision">
             <div class="slide-in from-left">
             <h1 class="Heading slide-in-content">Our Vision</h1>
@@ -107,7 +107,7 @@
 
           </p>
         </div>
-        <br><br><br>
+
 
         <div class="mission">
           <div class="slide-in from-right">
@@ -158,10 +158,10 @@
             <div class="col-sm-6">
                 <h2>About Dhinajpur Notun Aalo Society </h2>
 
-                <p style="font-size:14px;">Dinajpur Notun Aalo Society envisions a society where people are no longer discriminated on the basis of gender identity or sexual orientation.Our vision is of a society where all people ,regardless of gender or sexuality ,are able to access all social and economic opportunities necessary for their wellbeing and full development.<br> </p>
+                <p style="font-size:14px;padding-right:20px;">Dinajpur Notun Aalo Society envisions a society where people are no longer discriminated on the basis of gender identity or sexual orientation.Our vision is of a society where all people ,regardless of gender or sexuality ,are able to access all social and economic opportunities necessary for their wellbeing and full development.<br> </p>
             </div><!-- /.col-* -->
 
-            <div class="col-sm-3">
+            <div class="col-md-3">
                 <h2>Contact Information</h2>
                 <p style="font-size:14px;">
                   Jibonmore,Choprajhar
@@ -176,7 +176,7 @@
 
             </div><!-- /.col-* -->
 
-            <div class="col-sm-3"><br>
+            <div class="col-md-3"><br>
                 <a href="Donation.html" class="btn btn-donate btn-block" style="background-color:black;"> Donate</a>
             </div>
 
@@ -191,7 +191,7 @@
 <div class="footer-bottom">
     <div class="container">
         <div class="footer-bottom-left">
-            &copy; 2017 All rights reserved. Created by <a href="#">MASH</a>.
+            &copy; 2017 All rights reserved. Created by <a href="http://mashglobal.org">MASH</a>.
         </div><!-- /.footer-bottom-left -->
 
     </div><!-- /.container -->
