--- a/Service-network.html
+++ b/Service-network.html
@@ -106,7 +106,7 @@ condom promotion and distribution, various tests, ICTC, VDRL testing free of cos
       <div class="footer-bottom">
           <div class="container">
               <div class="footer-bottom-left">
-                  &copy; 2017 All rights reserved. Created by <a href="#">MASH</a>.
+                  &copy; 2017 All rights reserved. Created by <a href="http://mashglobal.org">MASH</a>.
               </div><!-- /.footer-bottom-left -->
 
           </div><!-- /.container -->
