--- a/Donation.html
+++ b/Donation.html
@@ -107,7 +107,7 @@
       <div class="footer-bottom">
           <div class="container">
               <div class="footer-bottom-left">
-                  &copy; 2017 All rights reserved. Created by <a href="#">MASH</a>.
+                  &copy; 2017 All rights reserved. Created by <a href="http://mashglobal.org">MASH</a>.
               </div><!-- /.footer-bottom-left -->
 
           </div><!-- /.container -->
