--- a/aboutUs.html
+++ b/aboutUs.html
@@ -105,7 +105,7 @@ Through Advocacy, it seeks to counter discrimination and improve the quality of 
   <div class="footer-bottom">
       <div class="container">
           <div class="footer-bottom-left">
-              &copy; 2017 All rights reserved. Created by <a href="#">MASH</a>.
+              &copy; 2017 All rights reserved. Created by <a href="http://mashglobal.org">MASH</a>.
           </div><!-- /.footer-bottom-left -->
 
       </div><!-- /.container -->
