--- a/Donation.html
+++ b/Donation.html
@@ -54,13 +54,13 @@
             <p>You can also donate by a Bank Account Transfer</p>
             <div class="details">
               <br><br>
-            <p><h3>Bank Name - Bank of india</h3>
+            <p><h4>Bank Name - Bank of india</h4>
 
-              <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Account No.- 409020110000317</h3>
+              <h4>Account No - 409020110000317</h4>
 
-       <h3>IFSC Code  - BKID0004090</h3>
+           <h4>IFSC Code - BKID0004090</h4>
 
-       <h3>&nbsp;&nbsp;&nbsp;&nbsp;Branch   - New Town Islampur</h3></p>
+       <h4>Branch   - New Town Islampur</h4></p>
           </div>
         </div>
         </div>
