--- a/Gallery.html
+++ b/Gallery.html
@@ -85,7 +85,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    <h2>About Dhinajpur Notun Aalo Society </h2>
+                    <h2>About Dinajpur Notun Aalo Society </h2>
 
                     <p style="font-size:14px;">Dinajpur Notun Aalo Society envisions a society where people are no longer discriminated on the basis of gender identity or sexual orientation.Our vision is of a society where all people ,regardless of gender or sexuality ,are able to access all social and economic opportunities necessary for their wellbeing and full development.<br> </p>
                 </div><!-- /.col-* -->
