--- a/aboutUs.html
+++ b/aboutUs.html
@@ -58,7 +58,7 @@
   </div>
     <br><br>
     <div class="activity">
-        <h2 class="Heading" style="text-align:center; font-size:35px;">Activities of Dinajpur Notun Aalo Society</h2>
+        <h2 class="Heading" style="text-align:center; font-size:35px;">Activities of  Notun Aalo Society</h2>
         <img src="img/activity.png" class="img-responsive activity-img"><br>
         <p class="content">DNAS takes a tripartite approach to its work, dividing its activities between advocacy, Network Building, and Service Delivery.
 Through Advocacy, it seeks to counter discrimination and improve the quality of life of PLHIV.</p>
@@ -70,7 +70,7 @@ Through Advocacy, it seeks to counter discrimination and improve the quality of 
       <div class="container">
           <div class="row">
               <div class="col-sm-6">
-                  <h2>About Dhinajpur Notun Aalo Society </h2>
+                  <h2>About Dinajpur Notun Aalo Society </h2>
 
                   <p style="font-size:14px;">Dinajpur Notun Aalo Society envisions a society where people are no longer discriminated on the basis of gender identity or sexual orientation.Our vision is of a society where all people ,regardless of gender or sexuality ,are able to access all social and economic opportunities necessary for their wellbeing and full development.<br> </p>
               </div><!-- /.col-* -->
@@ -82,7 +82,7 @@ Through Advocacy, it seeks to counter discrimination and improve the quality of 
                     <br>Islampur, Uttar Dinajpur
                     <br>733202
                     <br>  Phone:  +91  9804973734
-                    <br>  <a href="#"> dinajpurnotunaaio@gmail.com  <a href="#"></a></p>
+                    <br>  <a href="#"> Dinajpurnotunaaio@gmail.com  <a href="#"></a></p>
 
 
 
