--- a/Achievement.html
+++ b/Achievement.html
@@ -172,7 +172,7 @@ Our organization very actively work this project .we run a project 4(four) years
           <div class="container">
               <div class="row">
                   <div class="col-sm-6">
-                      <h2>About Dhinajpur Notun Aalo Society </h2>
+                      <h2>About Dinajpur Notun Aalo Society </h2>
 
                       <p style="font-size:14px;">Dinajpur Notun Aalo Society envisions a society where people are no longer discriminated on the basis of gender identity or sexual orientation.Our vision is of a society where all people ,regardless of gender or sexuality ,are able to access all social and economic opportunities necessary for their wellbeing and full development.<br> </p>
                   </div><!-- /.col-* -->
