--- a/Contact.html
+++ b/Contact.html
@@ -71,9 +71,12 @@
                     <div class="details">
                         <br><br>
 
-                            <i class="fa fa-map-marker fa-2x col-md-1"></i>  <span class="">Jibonmore,Choprajhar,<br>
-                              Islampur, Uttar Dinajpur<br>
-                              733202  </span>
+                            <i class="fa fa-map-marker fa-2x col-md-1"></i>  <span class="">Dinjapur Notun Aalo Society,<br>
+                              Thanacolony, Near Durga Mandir<br>
+                              Post & Ps - Islampur<br>
+                              Dist - Uttar Dinajpur<br>
+                              Pin-733202
+                              </span>
                                <br><br><br><br><br>
                             <i class="fa fa-phone fa-2x col-md-1"></i><span class=""> 9804973734/9563960284<br>7557829996</span><br>
                             <br><br><br>
