--- a/Contact.html
+++ b/Contact.html
@@ -80,7 +80,7 @@
                                <br><br><br><br><br>
                             <i class="fa fa-phone fa-2x col-md-1"></i><span class=""> 9804973734/9563960284<br>7557829996</span><br>
                             <br><br><br>
-                            <i class="fa fa-envelope fa-2x col-md-1"></i><span> dinajpurnotunaaio@gmail.com</span>
+                            <i class="fa fa-envelope fa-2x col-md-1"></i><span> dinajpurnotunaalo@gmail.com</span>
                     </div>
                 </div>
             </div>
