changed pc to staff deatils

--- a/ProgramChallenge.html
+++ b/ProgramChallenge.html
@@ -34,7 +34,7 @@
     </li>
 
 
-        <li class="active"><a href="ProgramChallenge.html">Program Challenges Page</a></li>
+        <li class="active"><a href="ProgramChallenge.html">Staff Details</a></li>
         <li><a href="Gallery.html">Gallery Page</a></li>
         <li><a href="Contact.html">Contact</a></li>
       </ul>
@@ -42,24 +42,43 @@
     </div>
     </nav>
   <br><br><br><br>
-  <h1 class="Heading">Program Challenges</h1>
+  <h1 class="Heading" style="font-weight: 200;">Staff Details</h1>
+  <br>
+  <div class="container">
+    <div class="col-md-4 staff">
+      <div class="staff-heading">
+        <h3 class="staff-center"><b>Jotiya Mondal</b></h3>
+      </div>
+        <p class="staff-center"><small>Founder & Secretary</small></p>
+        <hr style="border:1px solid;">
 
-  <div class="container ProgramUpdates">
-  <ul>
-    <li><b>Implementing TI projects :</b> In the year of 2015 we are facing the TI side validation and now wait for the JAT visit.</li>
-  </ul><ul><li>Delay in starting  TI Projects</li></ul>
-    <ul><li>Delay in initiating new TI Projects</li></ul>
-    <ul><li><b>Low ICTC testing :</b> ICTC lab technician not available last more then 5 month in islampur SD Hospital. </li></ul>
-    <ul><li>Form last few years we haven&apos;t  got any ICTC Mobile VAN services at our sub-divisions area , now our DAPCU assured us to give us ICTC Mobile VAN service as soon as possible , we hope we get the better opportunity for the improvement and betterment of community friends at our uttar dinajpur district.</li></ul>
-    <ul><li>We are Successfully Implementing the Pehchan Project, Pre-TI for more than four years<br>
-    </li></ul>
+        <div class="staff-details">
+        <i class="fa fa-envelope"></i> &nbsp;&nbsp;Mondaljoyita@gmail.com<br><br>
+        <i class="fa fa-phone"></i>&nbsp;&nbsp;&nbsp;7557829996
+      </div>
+    </div>
+    <div class="col-md-4 staff">
+        <h3 class="staff-center"><b>Chiranjit Paul</b></h3>
+        <p class="staff-center"><small>Director</small></p>
+          <hr style="border:1px solid;">
 
-    <ul><li>We are get a project under District level(U/Dinajpur) project namely Rogi Sahayak Kendra at Islampur BPHC (ramganj)</li></ul>
-    <ul><li>We are Implementing Age India (Old Age India) through the help of SDO of Islampur and dy magistrate and dy controller. </li></ul>
-  </ul>
+        <div class="staff-details">
+        <i class="fa fa-envelope"></i> &nbsp;&nbsp;Id-chiran1002@gmail.com<br><br>
+        <i class="fa fa-phone"></i>&nbsp;&nbsp;&nbsp;9563960284
+      </div>
+    </div>
+    <div class="col-md-4 staff">
+        <h3 class="staff-center"><b>Abhijit Kr Das</b></h3>
+        <p class="staff-center"><small>Project Manager</small></p>
+          <hr style="border:1px solid;">
+        <div class="staff-details">
+        <i class="fa fa-envelope"></i> abhijit_das2013@yahoo.com<br><br>
+
+      </div>
+    </div>
 
 </div>
-
+<br><br>
 <div class="footer-top">
     <div class="container">
         <div class="row">
@@ -76,7 +95,7 @@
                   <br>Islampur, Uttar Dinajpur
                   <br>733202
                   <br>  Phone:  +91  9804973734
-                  <br>  <a href="#"> dinajpurnotunaaio@gmail.com  <a href="#"></a></p>
+                  <br>  <a href="#"> Dinajpurnotunaalo@gmail.com  <a href="#"></a></p>
 
 
 
