--- a/Achievement.html
+++ b/Achievement.html
@@ -34,7 +34,7 @@
     </li>
 
 
-        <li><a href="ProgramChallenge.html">Program Challenges Page</a></li>
+          <li><a href="ProgramChallenge.html">Staff Details</a></li>
         <li><a href="Gallery.html">Gallery Page</a></li>
         <li><a href="Contact.html">Contact</a></li>
       </ul>
@@ -44,7 +44,7 @@
   <br>
 
   <div class="document-banner">
-    <br><br><br><br><h1 class="Heading">Program Updates / SSR Achievements</h1>
+    <br><br><br><br><h1 class="Heading">Organization Achievement</h1>
   </div>
   <div class="container-fluid">
 <div class="row">
@@ -184,7 +184,7 @@ Our organization very actively work this project .we run a project 4(four) years
                         <br>Islampur, Uttar Dinajpur
                         <br>733202
                         <br>  Phone:  +91  9804973734
-                        <br>  <a href="#"> dinajpurnotunaaio@gmail.com  <a href="#"></a></p>
+                        <br>  <a href="#"> Dinajpurnotunaalo@gmail.com  <a href="#"></a></p>
 
 
 
