--- a/Contact.html
+++ b/Contact.html
@@ -36,7 +36,7 @@
                     </li>
 
 
-                    <li><a href="ProgramChallenge.html">Program Challenges Page</a></li>
+                      <li><a href="ProgramChallenge.html">Staff Details</a></li>
                     <li><a href="Gallery.html">Gallery Page</a></li>
                     <li class="active"><a href="Contact.html">Contact</a></li>
                 </ul>
@@ -109,7 +109,7 @@
                         <br>Islampur, Uttar Dinajpur
                         <br>733202
                         <br> Phone: +91 9804973734
-                        <br> <a href="#"> dinajpurnotunaaio@gmail.com  <a href="#"></a></p>
+                        <br> <a href="#"> Dinajpurnotunaalo@gmail.com  <a href="#"></a></p>
 
 
 
