--- a/Home.html
+++ b/Home.html
@@ -31,7 +31,7 @@
       </li>
 
 
-          <li><a href="ProgramChallenge.html">Program Challenges Page</a></li>
+            <li><a href="ProgramChallenge.html">Staff Details</a></li>
           <li><a href="Gallery.html">Gallery Page</a></li>
           <li><a href="Contact.html">Contact</a></li>
         </ul>
@@ -168,7 +168,7 @@
                   <br>Islampur, Uttar Dinajpur
                   <br>733202
                   <br>  Phone:  +91  9804973734
-                  <br>  <a href="#"> dinajpurnotunaaio@gmail.com  <a href="#"></a></p>
+                  <br>  <a href="#"> Dinajpurnotunaalo@gmail.com  <a href="#"></a></p>
 
 
 
