--- a/aboutUs.html
+++ b/aboutUs.html
@@ -32,7 +32,7 @@
             </li>
 
 
-          <li><a href="ProgramChallenge.html">Program Challenges Page</a></li>
+            <li><a href="ProgramChallenge.html">Staff Details</a></li>
           <li><a href="Gallery.html">Gallery Page</a></li>
           <li><a href="Contact.html">Contact</a></li>
         </ul>
@@ -82,7 +82,7 @@ Through Advocacy, it seeks to counter discrimination and improve the quality of 
                     <br>Islampur, Uttar Dinajpur
                     <br>733202
                     <br>  Phone:  +91  9804973734
-                    <br>  <a href="#"> Dinajpurnotunaaio@gmail.com  <a href="#"></a></p>
+                    <br>  <a href="#"> Dinajpurnotunaalo@gmail.com  <a href="#"></a></p>
 
 
 
