--- a/Gallery.html
+++ b/Gallery.html
@@ -35,7 +35,7 @@
     </li>
 
 
-          <li><a href="ProgramChallenge.html">Staff Details</a></li>
+          <li><a href="Staff.html">Staff Details</a></li>
         <li class="active"><a href="Gallery.html">Gallery Page</a></li>
         <li><a href="Contact.html">Contact</a></li>
       </ul>
