--- a/Achievement.html
+++ b/Achievement.html
@@ -51,32 +51,32 @@
   <div class="">
           <div class="col-md-6">
             <h1 class="Heading" style="font-size:35px;">Sensitization of youth</h1>
-            <div style="font-size: 16px">
+            <div style="font-size: 20px">
             <ul>
                 <li>107 sensitization meetings conducted with Stakeholders</li>
 
             </ul>
             <ul>
-              <li> CMOH , Dy, CMOH, DAPCU, SCHOOL,COLLEGE of U/D</li>
+              <li> CMOH , DY, CMOH, DAPCU, School,College of U/D</li>
             </ul>
             <ul>
-              <li>Islampur, Dolua & Raiganj Hospital.</li>
-              <li>Ensuring supply of condoms.</li>
-              <li>SSR handover from parent to CBO</li>
-              <li>SDO, BDO, and other govt. official of islampur sub divisional area.</li>
-            </ul>
+              <li>Islampur, Dolua & Raiganj Hospital.</li></ul>
+              <ul><li>Ensuring supply of condoms.</li></ul>
+            <ul>  <li>SSR handover from parent to CBO</li></ul>
+            <ul><li>SDO, BDO, and other govt. official of islampur sub divisional area.</li></ul>
+
           </div>
         </div>
           <div class="col-md-6">
-              <img src="img/img3.jpg" style="width:103%;">
+              <img src="img/img24.jpg" style="width:103%;">
           </div>
           <div class="col-md-6">
-            <img src="img/img4.jpg" style="width:105%; float:left;">
+            <img src="img/img20.jpg" style="width:105%; float:left;">
           </div>&nbsp;&nbsp;
           <div class="col-md-6" style="text-align:left; padding-left:5%;">
             <h1 class="Heading" style="font-size:30px;">Youth  Sensitization meeting in School & College</h1>
-            <div style="font-size: 16px">
-            <ul>
+            <div style="font-size:20px">
+            <br><ul>
                 <li>sensitization meeting with youth students</li>
             </ul>
             <ul>
@@ -180,11 +180,13 @@ Our organization very actively work this project .we run a project 4(four) years
                   <div class="col-sm-3">
                       <h2>Contact Information</h2>
                       <p style="font-size:14px;">
-                        Jibonmore,Choprajhar
-                        <br>Islampur, Uttar Dinajpur
-                        <br>733202
+                        Dinjapur Notun Aalo Society,
+                        <br>Thanacolony, Near Durga Mandir
+                        <br>Post & Ps - Islampur
+                        Dist - Uttar Dinajpur
+                        <br>Pin-733202
                         <br>  Phone:  +91  9804973734
-                        <br>  <a href="#"> Dinajpurnotunaalo@gmail.com  <a href="#"></a></p>
+                        <br>  <a href="#"> dinajpurnotunaalo@gmail.com <a href="#"></a></p>
 
 
 
