--- a/Donation.html
+++ b/Donation.html
@@ -80,15 +80,13 @@
                   <div class="col-sm-3">
                       <h2>Contact Information</h2>
                       <p style="font-size:14px;">
-                        Jibonmore,Choprajhar
-                        <br>Islampur, Uttar Dinajpur
-                        <br>733202
+                        Dinjapur Notun Aalo Society,
+                        <br>Thanacolony, Near Durga Mandir
+                        <br>Post & Ps - Islampur
+                        Dist - Uttar Dinajpur
+                        <br>Pin-733202
                         <br>  Phone:  +91  9804973734
-                        <br>  <a href="#"> Dinajpurnotunaalo@gmail.com  <a href="#"></a></p>
-
-
-
-
+                        <br>  <a href="#"> dinajpurnotunaalo@gmail.com <a href="#"></a></p>
 
                   </div><!-- /.col-* -->
 
