--- a/Staff.html
+++ b/Staff.html
@@ -53,7 +53,7 @@
         <hr style="border:1px solid;">
 
         <div class="staff-details">
-        <i class="fa fa-envelope"></i> &nbsp;&nbsp;Mondaljoyita@gmail.com<br><br>
+        <i class="fa fa-envelope"></i> &nbsp;&nbsp;mondaljoyita2@gmail.com<br><br>
         <i class="fa fa-phone"></i>&nbsp;&nbsp;&nbsp;7557829996
       </div>
     </div>
@@ -91,14 +91,13 @@
             <div class="col-sm-3">
                 <h2>Contact Information</h2>
                 <p style="font-size:14px;">
-                  Jibonmore,Choprajhar
-                  <br>Islampur, Uttar Dinajpur
-                  <br>733202
+                  Dinjapur Notun Aalo Society,
+                  <br>Thanacolony, Near Durga Mandir
+                  <br>Post & Ps - Islampur
+                  Dist - Uttar Dinajpur
+                  <br>Pin-733202
                   <br>  Phone:  +91  9804973734
-                  <br>  <a href="#"> Dinajpurnotunaalo@gmail.com  <a href="#"></a></p>
-
-
-
+                  <br>  <a href="#"> dinajpurnotunaalo@gmail.com <a href="#"></a></p>
 
 
             </div><!-- /.col-* -->
