--- a/Staff.html
+++ b/Staff.html
@@ -47,7 +47,7 @@
   <div class="container">
     <div class="col-md-4 staff">
       <div class="staff-heading">
-        <h3 class="staff-center"><b>Jotiya Mondal</b></h3>
+        <h3 class="staff-center"><b>Joyita Mondal</b></h3>
       </div>
         <p class="staff-center"><small>Founder & Secretary</small></p>
         <hr style="border:1px solid;">
